# sim_model

./: .gitignore  MCmatrix.py  README.md  config.yaml  datsim.py  dsrCalc.py  getClass.py  helpers.py  makeNests.py  nestdata_columns.txt  nestinfo.txt  new_cols_params.txt  observer.py  paramLists.py  pyproject.toml  pyvenv.cfg  settings.py  simdata_vect.py  storm_init.Rmd  storm_init3.csv  storm_init_data2.csv  test-MCmatrix.py  test-config.yaml
