[project]
name = "sim-model"
version = "0.1.0"
description = "Create the simulated nest data"
authors = [
    {name = "Sarah",email = "sarah.bolinger@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    #"dataclasses (>=0.8,<0.9)",
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    #"typing (>=3.10.0.0,<4.0.0.0)"
    "python-language-server (>=0.36.2,<0.37.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
